--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>AniWay</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="{{ url_for('static', filename='aniway_favicon.ico') }}" type="image/x-icon">
   <script>
   let gruposIda = 0;
@@ -51,7 +51,7 @@
 <body>
 
 <div class="logo-container">
-    <img src="{{ url_for('static', filename='logo.png') }}" alt="AniWay Logo">
+    <img src="imagenes/nombre-de-la-imagen.png" alt="AniWay Logo">
 </div>
 
 <h1>Calculadora de gastos de viaje</h1>
