--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>AniWay</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="{{ url_for('static', filename='aniway_favicon.ico') }}" type="image/x-icon">
+  <link rel="icon" href="imagenes/aniway_favicon.ico" type="image/x-icon">
   <script>
   let gruposIda = 0;
   let gruposVuelta = 0;
@@ -51,7 +51,7 @@
 <body>
 
 <div class="logo-container">
-    <img src="imagenes/nombre-de-la-imagen.png" alt="AniWay Logo">
+    <img src="imagenes/logo.png" alt="AniWay Logo">
 </div>
 
 <h1>Calculadora de gastos de viaje</h1>
